Fixed the z-index of the loading image and the projector image

--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ body{
   color: #000000
 }
 
+.projectorImage{
+  z-index: 1;
+}
+
 
 .loadingImage{
   position: absolute;
@@ -95,6 +99,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: white;
+  z-index: 2;
 }
 
 
